--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
     }
    ],
    "source": [
-    "x_values = [cities[0]['BuenosAires'], cities[1]['Toronto'], cities[2]['Marakesh']]"
+    "x_values = [cities[0]['BuenosAires\\\\\\\\\\'], cities[1]['Toronto'], cities[2]['Marakesh']]"
    ]
   },
   {
