--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
     }
    ],
    "source": [
-    "x_values = [Bu[0]['city'], cities[1]['Toronto'], cities[2]['Marakesh']]"
+    "x_values = [BuenosAires[0]['city'], [1]['Toronto'], cities[2]['Marakesh']]"
    ]
   },
   {
