Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
     }
    ],
    "source": [
-    "x_values = [BuenosAires[0]['city'], Toronto[1]['City'], cities[2]['Marakesh']]"
+    "x_values = [BuenosAires[0]['city'], Toronto[1]['City'], Marakesh[2]['C']]"
    ]
   },
   {
