--- a/index.ipynb
+++ b/index.ipynb
@@ -379,8 +379,8 @@
    "outputs": [],
    "source": [
     "area_values = None\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [toronto], 'y': [], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': [toronto], 'y': [canada], 'text': []}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': [1000], 'y': [], 'text': []}"
    ]
   },
   {
