Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -380,7 +380,7 @@
    "source": [
     "area_values = None\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [toronto], 'y': [canada], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': [1000], 'y': [], 'text': []}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': [1000], 'y': [10000], 'text': []}"
    ]
   },
   {
