--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
     }
    ],
    "source": [
-    "x_values = [cities[0]['Buenos Aires'], cities[1]['City'], cities[2]['City']]\n"
+    "x_values = [cities[0]['Buenos Aires'], cities[1]['Toronto'], cities[2]['Marakesh']]\n"
    ]
   },
   {
